bookinfo/virtual-service-ratings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 3s
      route:
        - destination:
            host: ratings
            subset: v1
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: reviews
#spec:
#  hosts:
#    - reviews
#  http:
#    - route:
#        - destination:
#            host: reviews
#            subset: v2
#      timeout: 3s
